* Add fuse.run() global eval solution, rename fuse.String#evalScripts to fuse.String#runScripts, and make runScripts() callback arguments mimic ES5 callbacks. [jddalton]

* Remove fuse.RegExp#match alias of fuse.RegExp#test. [jddalton]
  Note: Backwards compatibility warning.

* Rename String methods and move HTML related String methods to html.js. [jddalton, Joe Gornick]
  - Rename fuse.String#times to fuse.String#repeat
  - Rename fuse.String#blank to fuse.String#isBlank
  - Rename fuse.String#empty to fuse.String#isEmpty

* Ensure `reStrict`, used in Fusebox, detects the strict mode directive correctly. [jddalton, kangax, Kit Goncharov]

* Add supplemental checks for the Firefox iframe issue with sandboxed natives. [jddalton]

* Add an adapter for DOMAssistant's CSS selector engine. [jddalton]

* Update selector engine adapters to use the build system's //= require command. [Diego Perini, jddalton, Tobie Langel]

* Make internal getNodeName() check for browsers that have case-sensitive nodeNames for unknown elements. [jddalton, Diego Perini]

* Add fuse.dom.Element.fromTagName(). [jddalton]

* Make Event#stop, Event#stopBubbling, and Event#cancel return the event wrapper to allow method chaining. [jdalton, Johan Arensman]

* Remove fuse.Array.create() in favor of using fuse.Array.from(3) when creating an array with one numeric value. [jddalton]

* Remove fuse.dom.Element.create() in favor of just calling fuse.dom.Element(). [jddalton]

* Fix Fusebox reference to postProcess() when it's redefined. [jddalton]

* Fix Fusebox memory leak associated with ActiveX technique. [jddalton, Sebastian Werner]

* Add fuse.Fusebox.getMode() and fuse.Fusebox.setMode() methods. [jddalton]

* Fix Firefox bug when adding and then removing iframes before dom load. [getify, jddalton]

* Rewrite Fusebox to use iframes by default. [jddalton]

* Fix IE8 bug with element.hasAttribute('selected') and other flagged attributes. [Diego Perini, jddalton]
