@@ -1,3 +1,5 @@
+* Avoid an extra fromElement() call in the fast lane of fuse.Event#findElement. [jddalton]
+
 * Add fuse.run() global eval solution, rename fuse.String#evalScripts to fuse.String#runScripts, and make runScripts() callback arguments mimic ES5 callbacks. [jddalton]
 
 * Remove fuse.RegExp#match alias of fuse.RegExp#test. [jddalton]
